--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -61,6 +61,7 @@ html {
   font-size: 16px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: clip;
 }
 
 body {
@@ -68,6 +69,7 @@ body {
   color: $color-white;
   min-height: 100vh;
   transition: background 0.35s ease, color 0.35s ease;
+  overflow-x: clip;
 }
 
 button {
